routes protection middleware and csrf token protection

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -52,6 +52,7 @@
       <li class="main-header__item">
         <form action="/logout" method="post">
           <button type="submit">Logout</button>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         </form>
       </li>
       <% } %>
@@ -107,6 +108,7 @@
     <li class="mobile-nav__item">
       <form action="/logout" method="post">
         <button type="submit">Logout</button>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
       </form>
     </li>
     <% } %>
